--- a/GOES-R_sharkfins.ipynb
+++ b/GOES-R_sharkfins.ipynb
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "stupid-migration",
    "metadata": {
     "scrolled": true
@@ -283,7 +283,7 @@
     "#             ttl = plt.title(f\"{title}\\n Date {mm}-{dd}, Year {yyyy}, \\n Day {DDD}, Time {HH}:{MM}:{ss}\",\\\n",
     "#                        fontsize=\"x-large\", fontweight='bold', pad = 6.0)\n",
     "#             ttl.set_position([.5, 1.05])\n",
-    "            fig1=plt.imshow(Kelvin_GOES_image, cmap='gray', vmin=180,vmax=300)\n",
+    "            fig1=plt.imshow(Kelvin_GOES_image, cmap='Greys', vmin=180,vmax=300)\n",
     "            arr = fig1.get_array()\n",
     "#             cbar = plt.colorbar()\n",
     "#             cbar.ax.set_ylabel('Kelvin')\n",
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "brief-guyana",
    "metadata": {},
    "outputs": [
@@ -393,7 +393,126 @@
       "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C10_G17_s20202500220319_e20202500229397_c20202500229428.nc\n",
       "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C10_G16_s20202570820189_e20202570829509_c20202570829544.nc\n",
       "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C10_G17_s20202640700319_e20202640709397_c20202640709430.nc\n",
-      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C10_G17_s20202870220319_e20202870229397_c20202870229436.nc\n"
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C10_G17_s20202870220319_e20202870229397_c20202870229436.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C10_G17_s20203521640321_e20203521649399_c20203521649440.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C10_G16_s20210030450205_e20210030459525_c20210030459595.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C11_G17_s20193480710341_e20193480719408_c20193480719466.nc\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C11_G17_s20193491650341_e20193491659408_c20193491659459.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C11_G17_s20193550320326_e20193550329392_c20193550329452.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C11_G16_s20193571600221_e20193571609529_c20193571609593.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C11_G17_s20193572250333_e20193572259400_c20193572259454.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C11_G17_s20193580400334_e20193580409401_c20193580409455.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C11_G16_s20200050600214_e20200050609522_c20200050609587.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C11_G16_s20200060000211_e20200060009518_c20200060009581.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C11_G17_s20200342150319_e20200342159386_c20200342159437.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C11_G17_s20200400410319_e20200400419386_c20200400419439.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C11_G17_s20200400620319_e20200400629386_c20200400629453.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C11_G17_s20200400710319_e20200400719386_c20200400719438.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C11_G17_s20200410120319_e20200410129385_c20200410129436.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C11_G16_s20200462120201_e20200462129509_c20200462129580.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C11_G16_s20200470500201_e20200470509509_c20200470509572.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C11_G16_s20201280610144_e20201280619452_c20201280619506.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C11_G16_s20201282130144_e20201282139452_c20201282139504.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C11_G17_s20201281950321_e20201281959388_c20201281959443.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C11_G16_s20201491000164_e20201491009472_c20201491009535.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C11_G17_s20201790910322_e20201790919389_c20201790919454.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C11_G17_s20202490120319_e20202490129386_c20202490129447.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C11_G17_s20202500220319_e20202500229386_c20202500229434.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C11_G16_s20210061350203_e20210061359511_c20210061359569.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C11_G16_s20210062330201_e20210062339508_c20210062339588.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C11_G16_s20210250920190_e20210250929498_c20210250929553.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C11_G17_s20210601710321_e20210601719387_c20210601719435.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C12_G17_s20193572250333_e20193572259405_c20193572259466.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C12_G17_s20193580400334_e20193580409406_c20193580409464.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C12_G16_s20193601830219_e20193601839533_c20193601839597.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C12_G16_s20200050600214_e20200050609527_c20200050609597.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C12_G17_s20200400620319_e20200400629391_c20200400629440.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C12_G17_s20200410120319_e20200410129391_c20200410129439.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C12_G16_s20200470500201_e20200470509514_c20200470509579.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C12_G17_s20200490030319_e20200490039391_c20200490039435.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M3C12_G17_s20200511815314_e20200511824386_c20200511824444.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C12_G16_s20201282130144_e20201282139458_c20201282139508.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C12_G17_s20201461800321_e20201461809394_c20201461809432.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C12_G16_s20201761750202_e20201761759516_c20201761759591.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C12_G17_s20201790910322_e20201790919395_c20201790919437.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C12_G17_s20202490120319_e20202490129391_c20202490129428.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C12_G17_s20202500220319_e20202500229391_c20202500229438.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C12_G17_s20202571700321_e20202571709393_c20202571709432.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C12_G16_s20202670820161_e20202670829475_c20202670829543.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C12_G17_s20203260750319_e20203260759391_c20203260759447.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C13_G16_s20193601150222_e20193601159541_c20193601200029.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C13_G17_s20193620640345_e20193620649423_c20193620649469.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C13_G17_s20200161800321_e20200161809399_c20200161809451.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C13_G16_s20200471930200_e20200471939520_c20200471940011.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C13_G16_s20201052040164_e20201052049484_c20201052049558.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C13_G16_s20201862350218_e20201862359538_c20201870000014.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C13_G16_s20202551520196_e20202551529516_c20202551529573.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C13_G16_s20202571730186_e20202571739506_c20202571739578.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C13_G17_s20202671050321_e20202671059399_c20202671059450.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C13_G16_s20202821040184_e20202821049504_c20202821049580.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C13_G16_s20203630630215_e20203630639535_c20203630639591.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C13_G16_s20210152300192_e20210152309512_c20210152309584.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C14_G17_s20193560830329_e20193560839396_c20193560839463.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C14_G16_s20193601200222_e20193601209530_c20193601210011.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C14_G17_s20200161800321_e20200161809388_c20200161809449.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C14_G17_s20200402030321_e20200402039388_c20200402039445.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C14_G16_s20200471930200_e20200471939508_c20200471940007.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C14_G17_s20200480750319_e20200480759386_c20200480759448.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C14_G17_s20201040340319_e20201040349386_c20201040349455.nc\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C14_G16_s20201052040164_e20201052049472_c20201052049540.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C14_G17_s20201050110319_e20201050119386_c20201050119448.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C14_G16_s20201231830147_e20201231839455_c20201231839534.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C14_G17_s20202791310321_e20202791319387_c20202791319449.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C14_G17_s20210140410320_e20210140419386_c20210140419442.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C14_G16_s20210631410167_e20210631419475_c20210631419560.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C15_G17_s20193480820338_e20193480829411_c20193480829470.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C15_G16_s20193591720221_e20193591729535_c20193591730028.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C15_G16_s20200170510195_e20200170519509_c20200170519590.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C15_G17_s20200200630320_e20200200639392_c20200200639456.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C15_G17_s20200310750319_e20200310759392_c20200310759445.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C15_G17_s20200331510321_e20200331519393_c20200331519441.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C15_G17_s20200400420319_e20200400429391_c20200400429453.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C15_G17_s20200400510319_e20200400519391_c20200400519455.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C15_G17_s20200401800321_e20200401809393_c20200401809455.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C15_G16_s20200470500201_e20200470509514_c20200470509588.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C15_G16_s20200481650201_e20200481659515_c20200481700006.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C15_G17_s20200480750319_e20200480759391_c20200480759453.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C15_G17_s20201050110319_e20201050119391_c20201050119453.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C15_G17_s20201122000321_e20201122009393_c20201122009452.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C15_G17_s20201131550321_e20201131559393_c20201131559447.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C15_G16_s20202671130160_e20202671139474_c20202671139557.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C15_G16_s20202682130203_e20202682139516_c20202682139595.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C15_G16_s20202691300204_e20202691309517_c20202691309596.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C15_G17_s20202720610319_e20202720619391_c20202720619453.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C15_G17_s20202762140318_e20202762149391_c20202762149445.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C15_G17_s20202781700321_e20202781709393_c20202781709453.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C16_G17_s20193501000341_e20193501009419_c20193501009474.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C16_G17_s20193501300341_e20193501309419_c20193501309472.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C16_G17_s20193501800342_e20193501809420_c20193501809476.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C16_G17_s20193600950342_e20193600959420_c20193600959471.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C16_G17_s20200211740321_e20200211749400_c20200211749446.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C16_G17_s20200331510321_e20200331519399_c20200331519447.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C16_G17_s20200392010321_e20200392019399_c20200392019432.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C16_G17_s20200400720319_e20200400729397_c20200400729432.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C16_G17_s20200401710321_e20200401719399_c20200401719439.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C16_G17_s20200471920321_e20200471929399_c20200471929444.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C16_G16_s20200481650201_e20200481659520_c20200481659592.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C16_G17_s20200931840321_e20200931849399_c20200931849436.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C16_G17_s20201050110319_e20201050119397_c20201050119451.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C16_G17_s20202320420319_e20202320429397_c20202320429443.nc\n",
+      "/scratch/gops/amqpfind/adomako_data/l1b_imagery_sharkfin/OR_ABI-L1b-RadF-M6C16_G17_s20202721520321_e20202721529399_c20202721529445.nc\n"
      ]
     }
    ],
@@ -411,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "understanding-mobility",
    "metadata": {},
    "outputs": [],
