--- a/AI_model.ipynb
+++ b/AI_model.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "id": "appreciated-stress",
    "metadata": {},
    "outputs": [],
@@ -28,22 +28,25 @@
     "from torch import nn\n",
     "from torch import optim\n",
     "import torch.nn.functional as F\n",
-    "from torchvision import datasets, transforms, models"
+    "from torchvision import datasets, transforms, models\n",
+    "from torch.utils.data.sampler import SubsetRandomSampler"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "id": "blocked-editing",
    "metadata": {},
    "outputs": [],
    "source": [
-    "nr.seed = 42"
+    "nr.seed = 42\n",
+    "MyTrainData = []\n",
+    "MyTestData = []"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 46,
    "id": "hungarian-header",
    "metadata": {},
    "outputs": [
@@ -51,12 +54,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['fillin', 'sharkfin']\n"
+      "<torch.utils.data.sampler.SubsetRandomSampler object at 0x7fb81364e908>\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'numpy.ndarray' object has no attribute 'classes'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-46-078b6dacb714>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     53\u001b[0m \u001b[0mtrainloader\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtestloader\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_split_train_test\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_dir\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m.2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     54\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 55\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrainloader\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdataset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclasses\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'classes'"
      ]
     }
    ],
    "source": [
-    "data_dir = '/home/radomako/myDataset/'\n",
+    "data_dir = '/scratch/adomakor412/mydataset3/'\n",
     "def load_split_train_test(datadir, valid_size = .2):\n",
     "    train_transforms = transforms.Compose([transforms.Resize(224),\n",
     "                                       transforms.ToTensor(),\n",
@@ -64,25 +78,63 @@
     "    test_transforms = transforms.Compose([transforms.Resize(224),\n",
     "                                      transforms.ToTensor(),\n",
     "                                      ])\n",
-    "    train_data = datasets.ImageFolder(datadir,       \n",
-    "                    transform=train_transforms)\n",
-    "    test_data = datasets.ImageFolder(datadir,\n",
-    "                    transform=test_transforms)\n",
-    "    num_train = len(train_data)\n",
-    "    indices = list(range(num_train))\n",
-    "    split = int(np.floor(valid_size * num_train))\n",
-    "    np.random.shuffle(indices)\n",
-    "    from torch.utils.data.sampler import SubsetRandomSampler\n",
-    "    train_idx, test_idx = indices[split:], indices[:split]\n",
-    "    train_sampler = SubsetRandomSampler(train_idx)\n",
-    "    test_sampler = SubsetRandomSampler(test_idx)\n",
-    "    trainloader = torch.utils.data.DataLoader(train_data,\n",
-    "                   sampler=train_sampler, batch_size=64)\n",
-    "    testloader = torch.utils.data.DataLoader(test_data,\n",
-    "                   sampler=test_sampler, batch_size=64)\n",
+    "    ind_train = np.floor((1-valid_size) * len(datadir))\n",
+    "    img_train = datasets.ImageFolder(datadir, transform=train_transforms)\n",
+    "    train_shuffle = np.array(img_train.imgs)\n",
+    "    np.random.shuffle(train_shuffle)\n",
+    "    \n",
+    "    ind_test = np.floor((valid_size) * len(datadir))\n",
+    "    img_test = datasets.ImageFolder(datadir, transform=test_transforms)\n",
+    "    test_shuffle = np.array(img_test.imgs)\n",
+    "    np.random.shuffle(test_shuffle)\n",
+    "    \n",
+    "    \n",
+    "    train_data = np.copy(train_shuffle)\n",
+    "    test_data = np.copy(test_shuffle)\n",
+    "    \n",
+    "    for path in train_data:\n",
+    "        MyTrainData.append(path[0])\n",
+    "    for path in test_data:\n",
+    "        MyTestData.append(path[0])\n",
+    "    \n",
+    "# #     train_data = datasets.ImageFolder(datadir,       \n",
+    "# #                     transform=train_transforms)\n",
+    "# #     test_data = datasets.ImageFolder(datadir,\n",
+    "# #                     transform=test_transforms)\n",
+    "    num_train=(len(datasets.ImageFolder(datadir, transform = train_transforms)))\n",
+    "    train_idx, test_idx = len(train_data), len(test_data)\n",
+    "    test_sampler = SubsetRandomSampler(ind_test)\n",
+    "    train_sampler = SubsetRandomSampler(ind_train)\n",
+    "#     num_train = len(train_data)\n",
+    "#     indices = list(range(num_train))\n",
+    "#     split = int(np.floor(valid_size * num_train))\n",
+    "#     np.random.shuffle(indices)\n",
+    "#     train_idx, test_idx = indices[split:], indices[:split]\n",
+    "#     train_sampler = SubsetRandomSampler(train_idx)\n",
+    "#     test_sampler = SubsetRandomSampler(test_idx)\n",
+    "#     trainloader = torch.utils.data.DataLoader(train_data,\n",
+    "#                    sampler=train_sampler, batch_size=64)\n",
+    "#     testloader = torch.utils.data.DataLoader(test_data,\n",
+    "#                    sampler=test_sampler, batch_size=64)\n",
+    "\n",
+    "    trainloader = torch.utils.data.DataLoader(img_train, sampler=train_sampler, batch_size=64)\n",
+    "    testloader = torch.utils.data.DataLoader(img_test, sampler=test_sampler, batch_size=64)\n",
+    "    \n",
     "    return trainloader, testloader\n",
     "trainloader, testloader = load_split_train_test(data_dir, .2)\n",
+    "\n",
     "print(trainloader.dataset.classes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "instrumental-reset",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(MyTrainData)\n",
+    "print(MyTestData)"
    ]
   },
   {
@@ -864,7 +916,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.6.12"
   }
  },
  "nbformat": 4,
