Same size artifact images WIP

--- a/AI_model.ipynb
+++ b/AI_model.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 96,
    "id": "appreciated-stress",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "id": "blocked-editing",
    "metadata": {},
    "outputs": [],
@@ -44,39 +44,67 @@
     "nr.seed = 42\n",
     "data_train_dir = '/scratch/adomakor412/train/'\n",
     "data_test_dir = '/scratch/adomakor412/test/'\n",
-    "data_val_dir = '/scratch/adomakor412/test/'\n",
+    "data_val_dir = '/scratch/adomakor412/val/'\n",
     "\n",
     "full_fillin = '/scratch/adomakor412/mydataset3/fillin/'\n",
     "full_sharkfin = '/scratch/adomakor412/mydataset3/sharkfin/'\n",
     "\n",
-    "ind_fillin = int(np.floor(len(full_fillin) * 0.8))\n",
-    "path_fillin = os.listdir(full_fillin)[:ind_fillin]\n",
+    "#80% for Test-train of which is broken into 1:2 ratio\n",
+    "#80% for Test-train of which is broken into 1:2 ratio\n",
+    "#20% for Validation\n",
+    "\n",
+    "ind_fillin = int(np.floor(len(full_fillin) * 0.8)*(.66))\n",
+    "fillin_train = os.listdir(full_fillin)[:ind_fillin]\n",
     "fillin_test = os.listdir(full_fillin)[ind_fillin:]\n",
     "\n",
     "ind_sharkfin = int(np.floor(len(full_sharkfin) * 0.8))\n",
-    "path_sharkfin = os.listdir(full_sharkfin)[:ind_sharkfin]\n",
+    "sharkfin_train = os.listdir(full_sharkfin)[:ind_sharkfin]\n",
     "sharkfin_test = os.listdir(full_sharkfin)[ind_sharkfin:]\n",
     "\n",
-    "for path in path_fillin:\n",
-    "    cmd = [f'cp {path} /scratch/adomakor412/test']\n",
-    "    pid = Popen(cmd, shell=True)\n",
-    "    pid.communicate()\n",
+    "ind_sharkfin = int(np.floor(len(full_sharkfin) * 0.8))\n",
+    "sharkfin_train = os.listdir(full_sharkfin)[:ind_sharkfin]\n",
+    "sharkfin_test = os.listdir(full_sharkfin)[ind_sharkfin:]\n",
+    "\n",
+    "# for path in fillin_train:\n",
+    "#     cmd = [f'cp {data_train_dir}/{path} /scratch/adomakor412/train/fillin']\n",
+    "#     pid = Popen(cmd, shell=True)\n",
+    "#     pid.communicate()\n",
     "    \n",
-    "for path in path_sharkfin:\n",
-    "    cmd = [f'cp {path} /scratch/adomakor412/train']\n",
-    "    pid = Popen(cmd, shell=True)\n",
-    "    pid.communicate()\n",
+    "# for path in sharkfin_train:\n",
+    "#     cmd = [f'cp {data_train_dir}/{path} /scratch/adomakor412/train/sharkfin']\n",
+    "#     pid = Popen(cmd, shell=True)\n",
+    "#     pid.communicate()\n",
     "    \n",
-    "for path in fillin_test:\n",
-    "    cmd = [f'cp {path} /scratch/adomakor412/test']\n",
-    "    pid = Popen(cmd, shell=True)\n",
-    "    pid.communicate()\n",
+    "# for path in fillin_test:\n",
+    "#     cmd = [f'cp {data_test_dir}/{path} /scratch/adomakor412/test/fillin']\n",
+    "#     pid = Popen(cmd, shell=True)\n",
+    "#     pid.communicate()\n",
     "    \n",
-    "for path in sharkfin_test:\n",
-    "    cmd = [f'cp {path} /scratch/adomakor412/train']\n",
-    "    pid = Popen(cmd, shell=True)\n",
-    "    pid.communicate()\n"
+    "# for path in sharkfin_test:\n",
+    "#     cmd = [f'cp {data_test_dir}/{path} /scratch/adomakor412/train/sharkfin']\n",
+    "#     pid = Popen(cmd, shell=True)\n",
+    "#     pid.communicate()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "appointed-transfer",
+   "metadata": {},
+   "source": [
+    "# Tensorboard command line set up\n",
+    "\n",
+    "#### [How to “reset” tensorboard data after killing tensorflow instance](https://stackoverflow.com/questions/34454721/how-to-reset-tensorboard-data-after-killing-tensorflow-instance)\n",
+    "\n",
+    "#### [Get started with TensorBoard](https://www.tensorflow.org/tensorboard/get_started)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "polar-yield",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -121,7 +149,7 @@
     "                                      ])\n",
     "    ind_train = np.floor((1-valid_size) * len(datadir))\n",
     "    img_train = datasets.ImageFolder(datadir, transform=train_transforms)#[:ind_train]\n",
-    "    print (img_train.imgs )\n",
+    "    #print (img_train.imgs )\n",
     "    train_shuffle = np.array(img_train.imgs)\n",
     "    np.random.shuffle(train_shuffle)\n",
     "    \n",
@@ -170,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "extensive-conference",
+   "id": "pretty-disposition",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "macro-carbon",
+   "id": "floating-adventure",
    "metadata": {},
    "outputs": [
     {
