--- a/GOES-R_imageFD.ipynb
+++ b/GOES-R_imageFD.ipynb
@@ -135,13 +135,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "prescribed-banks",
    "metadata": {},
    "outputs": [],
    "source": [
     "Sat = [16,17]\n",
-    "#band = range(7,17)\n",
+    "band = range(8,17)\n",
     "year = [2021]\n",
     "month = list(range(1,2))#list(range(1,3))\n",
     "day = list(range(1,2))#list(range(1,32))\n",
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "weird-virginia",
    "metadata": {},
    "outputs": [],
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 44,
    "id": "stupid-migration",
    "metadata": {
     "scrolled": true
@@ -229,7 +229,8 @@
     "    try:\n",
     "        #Not a cd command, use absolute path\n",
     "        #netcdf = glob.glob(f'~/arcdata/goes/grb/goes{SS}/{yyyy}/{yyyy}_{mm}_{dd}_{DDD}/abi/L1b/RadF/')\n",
-    "        netcdf = glob(f'{fullDisk}'+f'{SS}/{yyyy}/{yyyy}_{mm}_{dd}_{DDD}/abi/L1b/RadF/*.nc')\n",
+    "        netcdf = glob(f'{fullDisk}'+\\\n",
+    "                      f'{SS}/{yyyy}/{yyyy}_{mm}_{dd}_{DDD}/abi/L1b/RadF/*C{bb}*.nc')\n",
     "            \n",
     "        print(netcdf, file=filelog)\n",
     "\n",
@@ -360,20 +361,19 @@
     "agents = 1\n",
     "chunksize = 3\n",
     "\n",
+    "# # use number of bands as agents\n",
+    "# with Pool(processes = agents) as pool:\n",
+    "#     #pool.map(execute, search, chunksize=None)\n",
+    "#     args = [(hour, band) for hour in search for band in range(8,17)]\n",
+    "#     pool.map(execute, args, chunksize = chunksize)\n",
+    "\n",
+    "\n",
     "# use number of bands as agents\n",
     "with Pool(processes = agents) as pool:\n",
     "    #pool.map(execute, search, chunksize=None)\n",
-    "    args = [(hour, band) for hour in search for band in range(8,17)]\n",
+    "    args = [(hour, band) for hour in search for band in range(8,16)]\n",
     "    pool.map(execute, args, chunksize = chunksize)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "numerical-netscape",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
