reset tensorboard processID and summaryWriter directory

--- a/AUC_model.ipynb
+++ b/AUC_model.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "id": "appreciated-stress",
    "metadata": {},
    "outputs": [],
@@ -47,8 +47,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "unexpected-andrews",
+   "execution_count": 2,
+   "id": "suburban-origin",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "id": "blocked-editing",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "alternate-richardson",
+   "id": "supported-senegal",
    "metadata": {},
    "source": [
     "# Tensorboard set-up"
@@ -77,30 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "juvenile-private",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(None, None)"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cmd = [\"tensorboard --logdir='../' --bind_all --port=6006 &\"]\n",
-    "pid = Popen(cmd, shell=True) \n",
-    "pid.communicate()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "id": "hungarian-header",
    "metadata": {},
    "outputs": [
@@ -156,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "id": "contained-kernel",
    "metadata": {},
    "outputs": [
@@ -178,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 6,
    "id": "fossil-holiday",
    "metadata": {},
    "outputs": [],
@@ -195,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 7,
    "id": "applicable-understanding",
    "metadata": {},
    "outputs": [
@@ -386,7 +363,7 @@
        ")"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,6 +393,18 @@
      "output_type": "stream",
      "text": [
       "1\n",
+      "REACHED RUNNING LOSS\n",
+      "I am working\n",
+      "Epoch 1/1.. Train loss: 2.069.. Test loss: 0.795.. Test accuracy: 0.946\n",
+      "2\n",
+      "REACHED RUNNING LOSS\n",
+      "I am working\n",
+      "Epoch 1/1.. Train loss: 0.921.. Test loss: 0.940.. Test accuracy: 0.942\n",
+      "3\n",
+      "REACHED RUNNING LOSS\n",
+      "I am working\n",
+      "Epoch 1/1.. Train loss: 0.633.. Test loss: 0.677.. Test accuracy: 0.946\n",
+      "4\n",
       "REACHED RUNNING LOSS\n",
       "I am working\n"
      ]
@@ -617,7 +606,7 @@
     "#     pid = Popen(cmd, shell=True)\n",
     "#     pid.communicate()\n",
     "\n",
-    "writer = SummaryWriter(f'AUC_model{time.time()}')"
+    "writer = SummaryWriter(f'../AUC_model{time.time()}')"
    ]
   },
   {
@@ -629,7 +618,7 @@
    "source": [
     "# writer.purge_step\n",
     "# writer.close()\n",
-    "# writer = SummaryWriter(f'AUC_model{time.time()}')"
+    "# writer = SummaryWriter(f'../AUC_model{time.time()}')"
    ]
   },
   {
@@ -822,57 +811,6 @@
     "# plot all the pr curves\n",
     "for i in range(len(classes)):\n",
     "    add_pr_curve_tensorboard(i, test_probs, test_preds)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "consecutive-uncle",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from PIL import Image\n",
-    "#file_dir = '/scratch/radomako/mydataset3/sharkfin/'\n",
-    "file_dir = '/scratch/radomako/mydataset3/fillin/'\n",
-    "sharkfin = os.listdir(file_dir)\n",
-    "for fin in sharkfin:\n",
-    "    img = Image.open(op.join(file_dir, fin))\n",
-    "    #if img.mode != 'L':\n",
-    "    if img.mode != 'LA':\n",
-    "        print(fin)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "olympic-worship",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "img"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "egyptian-credit",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from PIL import Image\n",
-    "file = '/scratch/radomako/mydataset3/fillin/224x224_GOES-16_ABI_RadF_C08_2021001_000020Z.tif.png'\n",
-    "img = Image.open(file)\n",
-    "print(img.mode)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "purple-inspector",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "img"
    ]
   }
  ],
